Bug 1258711 - Skip the pixel cap when drawing scrollbar tracks or thumbs, since they don't use intermediate surfaces internally to CoreUI, and shouldn't blow up. r=mstange

MozReview-Commit-ID: BrSqOnwEKUf