widget/cocoa/nsNativeThemeCocoa.mm
@@ -902,9 +902,9 @@ static void DrawCellWithSnapping(NSCell *cell,
 @end
 
 static void
-RenderWithCoreUILegacy(CGRect aRect, CGContextRef cgContext, NSDictionary* aOptions)
+RenderWithCoreUILegacy(CGRect aRect, CGContextRef cgContext, NSDictionary* aOptions, bool aSkipAreaCheck)
 {
-  if (aRect.size.width * aRect.size.height <= BITMAP_MAX_AREA) {
+  if (aSkipAreaCheck || (aRect.size.width * aRect.size.height <= BITMAP_MAX_AREA)) {
     CUIRendererRef renderer = [NSWindow respondsToSelector:@selector(coreUIRenderer)]
       ? [NSWindow coreUIRenderer] : nil;
     CUIDraw(renderer, aRect, cgContext, (CFDictionaryRef)aOptions, NULL);
@@ -947,7 +947,7 @@ RenderWithCoreUI(CGRect aRect, CGContextRef cgContext, NSDictionary* aOptions)
     [appearance _drawInRect:aRect context:cgContext options:aOptions];
   } else {
     // 10.9 and below
-    RenderWithCoreUILegacy(aRect, cgContext, aOptions);
+    RenderWithCoreUILegacy(aRect, cgContext, aOptions, false);
   }
 }
 
@@ -2903,7 +2903,8 @@ nsNativeThemeCocoa::DrawWidgetBackground(nsRenderingContext* aContext,
                   [NSNumber numberWithBool:YES], @"indiconly",
                   [NSNumber numberWithBool:YES], @"kCUIThumbProportionKey",
                   [NSNumber numberWithBool:YES], @"is.flipped",
-                  nil]);
+                  nil],
+                true);
       }
       break;
     case NS_THEME_SCROLLBAR_BUTTON_UP:
@@ -2942,6 +2943,7 @@ nsNativeThemeCocoa::DrawWidgetBackground(nsRenderingContext* aContext,
               }
             }
           }
+
           const BOOL isOnTopOfDarkBackground = IsDarkBackground(aFrame);
           RenderWithCoreUILegacy(macRect, cgContext,
                   [NSDictionary dictionaryWithObjectsAndKeys:
@@ -2952,7 +2954,8 @@ nsNativeThemeCocoa::DrawWidgetBackground(nsRenderingContext* aContext,
                     [NSNumber numberWithBool:YES], @"noindicator",
                     [NSNumber numberWithBool:YES], @"kCUIThumbProportionKey",
                     [NSNumber numberWithBool:YES], @"is.flipped",
-                    nil]);
+                    nil],
+                  true);
         }
       }
       break;
